Finished the group features (get all, rmv, crt and show one)

--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,4 @@
-<div ng-init="type='teacher'" ng-controller='ctrl' id='mainContent'></div>
+<div ng-init="type='teacher'" ng-controller='loginCtrl' id='mainContent'></div>
     <form name='submitForm'>
         <label for="user">Username:</label>
         <input type="email" name="user" ng-model="user" placeholder="E-mail" required>
